--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -53,6 +53,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="32dp"
             android:background="#FF9800"
+            android:onClick="clickRooms"
             android:text="Rooms"
             app:layout_constraintBottom_toTopOf="@+id/bookNowBtn5"
             app:layout_constraintEnd_toEndOf="parent"
