--- a/app/src/main/res/layout/activity_finish.xml
+++ b/app/src/main/res/layout/activity_finish.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Rooms"
+        android:text="@string/rooms"
         android:textAlignment="center"
         android:textColor="#0C0C0C"
         android:textSize="18sp"
@@ -35,7 +35,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="24dp"
         android:background="#FF9800"
-        android:text="DELETE"
+        android:text="@string/delete"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -52,7 +52,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="24dp"
         android:background="#FF9800"
-        android:text="UPDATE"
+        android:text="@string/update"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -238,7 +238,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Check-In"
+        android:text="@string/check_in"
         android:textAlignment="center"
         android:textColor="#0C0C0C"
         android:textSize="18sp"
@@ -269,7 +269,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Full Name:"
+        android:text="@string/full_name"
         android:textAlignment="center"
         android:textColor="#0C0C0C"
         android:textSize="18sp"
@@ -288,7 +288,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Cntact No:"
+        android:text="@string/cntact_no"
         android:textAlignment="center"
         android:textColor="#0C0C0C"
         android:textSize="18sp"
@@ -307,7 +307,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Address"
+        android:text="@string/address"
         android:textAlignment="center"
         android:textColor="#0C0C0C"
         android:textSize="18sp"
@@ -327,7 +327,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="#FFEB3B"
-        android:text="Book Now"
+        android:text="@string/book_now"
         android:textAlignment="center"
         android:textColor="#0C0B0B"
         android:textSize="18sp"
@@ -363,7 +363,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="#FF9800"
-        android:text="Paradise Hotel"
+        android:text="@string/paradise_hotel"
         android:textColor="#0A0A0A"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
