--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -22,7 +22,7 @@
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="8dp"
             android:background="#FF9800"
-            android:text="Facilities"
+            android:text="@string/facilities"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -38,7 +38,7 @@
             android:layout_marginEnd="32dp"
             android:background="#FF9800"
             android:onClick="clickv"
-            android:text="Payment"
+            android:text="@string/payment"
             app:layout_constraintBottom_toTopOf="@+id/bookNowBtn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -54,7 +54,7 @@
             android:layout_marginEnd="32dp"
             android:background="#FF9800"
             android:onClick="clickRooms"
-            android:text="Rooms"
+            android:text="@string/rooms"
             app:layout_constraintBottom_toTopOf="@+id/bookNowBtn5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.51"
@@ -69,7 +69,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="32dp"
             android:background="#FF9800"
-            android:text="Gallery"
+            android:text="@string/gallery"
             app:layout_constraintBottom_toTopOf="@+id/bookNowBtn4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -84,7 +84,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="32dp"
             android:background="#FF9800"
-            android:text="Contact Us"
+            android:text="@string/contact_us"
+            android:onClick="contactUsClick"
             app:layout_constraintBottom_toTopOf="@+id/bookNowBtn7"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -99,7 +100,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="32dp"
             android:background="#FF9800"
-            android:text="Book Now"
+            android:text="@string/book_now"
             app:layout_constraintBottom_toTopOf="@+id/bookNowBtn6"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -114,7 +115,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="32dp"
             android:background="#FF9800"
-            android:text="Reservation"
+            android:text="@string/reservation"
             app:layout_constraintBottom_toTopOf="@+id/bookNowBtn3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
@@ -129,7 +130,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:background="#FF9800"
-            android:text="Paradise Hotel"
+            android:text="@string/paradise_hotel"
             android:textColor="#0A0A0A"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -196,7 +197,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="52dp"
             android:layout_marginEnd="8dp"
-            android:text="Galle,Road Colombo 003"
+            android:text="@string/galle_road_colombo_003"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.096"
             app:layout_constraintStart_toStartOf="parent"
