--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:layout_marginTop="36dp"
         android:layout_marginEnd="8dp"
         android:background="#FF9800"
-        android:text="Paradise Hotel"
+        android:text="@string/paradise_hotel"
         android:textColor="#0A0A0A"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,7 +104,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:background="#968787"
-        android:text="Reception 2"
+        android:text="@string/reception_2"
         android:textAlignment="center"
         android:textColor="#1D2222"
         android:textSize="18sp"
@@ -121,7 +121,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="piyal@gmail.com"
+        android:text="@string/piyal_gmail_com"
         android:textColor="#FF5722"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -139,7 +139,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="32dp"
         android:background="#968787"
-        android:text="Reception 2"
+        android:text="@string/reception_2"
         android:textAlignment="center"
         android:textColor="#1D2222"
         android:textSize="18sp"
@@ -157,7 +157,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginBottom="32dp"
         android:background="#968787"
-        android:text="Reception 1"
+        android:text="@string/reception_1"
         android:textAlignment="center"
         android:textColor="#1D2222"
         android:textSize="18sp"
@@ -173,7 +173,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="sam@gmail.com"
+        android:text="@string/sam_gmail_com"
         android:textColor="#FF5722"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -190,7 +190,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="+0712076543"
+        android:text="@string/_0712076543"
         android:textColor="#FF5722"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -209,7 +209,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="#968787"
-        android:text="Reception 2"
+        android:text="@string/reception_2"
         android:textAlignment="center"
         android:textColor="#1D2222"
         android:textSize="18sp"
@@ -228,7 +228,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="+0771265341"
+        android:text="@string/_0771265341"
         android:textColor="#FF5722"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -259,7 +259,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="#FF5722"
-        android:text="Make Reservation"
+        android:text="@string/make_reservation"
         android:textAlignment="center"
         android:textColor="#0C0B0B"
         android:textSize="18sp"
