--- a/app/src/main/res/layout/activity_update_delete.xml
+++ b/app/src/main/res/layout/activity_update_delete.xml
@@ -75,7 +75,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Your Message:"
+        android:text="@string/your_message"
         android:textColor="#FC070707"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -110,7 +110,7 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="PARADISE"
+        android:text="@string/paradise"
         android:textColor="#E90C0C"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -128,7 +128,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="52dp"
         android:layout_marginBottom="8dp"
-        android:text="HOTEL"
+        android:text="@string/hotel"
         android:textColor="#FAF8EE"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -146,7 +146,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="68dp"
-        android:text="UPDATE"
+        android:onClick="onUpdateButtonPushed"
+        android:text="@string/update"
         android:textColor="#FC0A0A0A"
         app:backgroundTint="#0AFA0A"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -164,7 +165,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="104dp"
         android:layout_marginBottom="68dp"
-        android:text="DELETE"
+        android:text="@string/delete"
         app:backgroundTint="#FF0000"
         android:textColor="#FA070707"
         app:layout_constraintBottom_toBottomOf="parent"
