--- a/app/src/main/res/layout/activity_payment1.xml
+++ b/app/src/main/res/layout/activity_payment1.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:onClick="clickv"
-        android:text="Add"
+        android:text="@string/add"
         app:backgroundTint="#F4A460"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
